# schema-display

./: .env  README.md  pyproject.toml
example/: example.sh  invoice_schema.json  system_schema.json
schema_display/: invoice.py
