[tool.poetry]
name = "schema-display"
version = "0.1.0"
description = ""
authors = ["Stephen Midgley <stephenmidgley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
erdantic = "^1.0.5"
datamodel-code-generator = "^0.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
